manage user car

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: aquamarine;
+    background-color: rgb(255, 255, 255);
     // background-image: url(../../../public/img/bg-login-img.jpg) !important;
     background-size: auto;
 
