--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,50 +1,184 @@
-.navbar {
-    background-color: rgb(134, 109, 82);
-    height: 70px;
+// .navbar {
+//     background-color: rgb(134, 109, 82);
+//     height: 70px;
 
-    .nav-header {
-        .bg-body-tertiary {
-            display: flex;
+//     .nav-header {
+//         .bg-body-tertiary {
+//             display: flex;
 
-            .brand {
-                margin-left: 20px;
-                margin-top: 9px;
-            }
+//             .brand {
+//                 margin-left: 20px;
+//                 margin-top: 9px;
+//             }
 
-            .navbar-brand {
-                margin-right: 100px;
-            }
+//             .navbar-brand {
+//                 margin-right: 100px;
+//             }
 
-            .container {
+//             .container {
             
                 
-                .navbar-collapse {
-                    display: flex;
+//                 .navbar-collapse {
+//                     display: flex;
                     
-                     justify-content: space-between;
-                     width: 850px;
+//                      justify-content: space-between;
+//                      width: 850px;
 
-                    .me-auto {
-                        display: flex;
-                        margin-top: 20px;
+//                     .me-auto {
+//                         display: flex;
+//                         margin-top: 20px;
 
-                        .nav-link {
-                            margin: 0 10px;
-                            text-decoration: none;
-                        }
-                    }
+//                         .nav-link {
+//                             margin: 0 10px;
+//                             text-decoration: none;
+//                         }
+//                     }
 
-                    .login-User {
-                        display: flex;
-                        margin-top: 20px;
-                        .welcome{
-                            margin-right: 10px;
+//                     .login-User {
+//                         display: flex;
+//                         margin-top: 20px;
+//                         .welcome{
+//                             margin-right: 10px;
                           
-                        }
-                    }
-                }
-            }
-        }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
 
+//     }
+// }
+
+.navbar {
+    flex-wrap: nowrap !important;
+  
+    justify-content: end !important;
+    background-color: #f8f9fa;
+    height: 80px;
+    // width: 100%;
+    .container {
+      display: block !important;
+      justify-content: end !important;
+      flex-wrap: wrap !important;
+  
+      text-align: right !important;
+      
     }
+    .me-auto {
+      margin-left: auto;
+      gap: 20px;
+    }
+    // background-color: aqua;
+  }
+  
+  .top-nav {
+    // overflow: hidden;
+    background-color: #333;
+  
+    a {
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+  
+    a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+  
+    a.active {
+      background-color: #04aa6d;
+      color: white;
+    }
+  }
+  
+  .nav-header {
+    .brand {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .navbar-brand {
+      color: #000 !important;
+  
+      img {
+        animation: App-logo-spin infinite 20s linear;
+      }
+  
+      @keyframes App-logo-spin {
+        // from {
+        //   transform: rotate(0deg);
+        // }
+  
+        // to {
+        //   transform: rotate(360deg);
+        // }
+      }
+    }
+  
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+  
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+  
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {
+      background-color: #ddd;
+    }
+  
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+  
+    .navbar-nav {
+      a,
+      .nav-link {
+        color: #0b0e0e !important;
+  
+        &:hover {
+          color: #b92121 !important;
+        }
+      }
+  
+      .nav-link.welcome {
+        color: #000 !important;
+      }
+    }
+  
+    .a,
+    .nav-link,
+    .account-title {
+        transition: color 0.3s ease; /* Define transition for color change */
+        
+        &.active {
+            color: #b20f0f !important;
+        }
+    }
+  
+    .dropdown-menu {
+      a {
+        color: #212529 !important;
+      }
+    }
+  }
+  
+
+  .navbar-light-Admin.bg-light-Admin {
+    background-color: rgba(168, 177, 225, 0.196);
 }
